  - Fixed bugs in DIR$() function that would cause a crash if called with no
    arguments:
        - If it had never been initialised with a pattern to match.
        - If the empty string indicating the end of the directory stream had
          already been returned.
  - Fixed bug in CALL command and function to allow the function/subroutine
    name to be provided by a non-trivial expression.

Version 0.5.0 - 3-Feb-2023:
  - Changed to semantic versioning scheme.
    Note that MMB4L is still versioned independently of Geoff and Peter's
    "mainline" MMBasic platforms.
        - MM.INFO(VERSION) will return the integer 5000000 for this release,
          divide by 10000000 to get float equivalent, e.g. 0.5
        - MM.INFO(VERSION MAJOR) will return major version, 0 for this release.
        - MM.INFO(VERSION MINOR) will return minor version, 5 for this release.
        - MM.INFO(VERSION MICRO) will return minor/patch version, 0 for this
          release.
        - MM.INFO(VERSION BUILD) will return the build number, 0 for this
          release and only included for use in some theoretical future.
  - Added "automatic path completion" to the MMBasic prompt.
        - Pressing TAB will attempt to complete (as far as can be unambiguously
          determined) a filename that the user is typing at the prompt, or sound
          the console bell if no completion is possible.
  - Added MM.INFO(CALLDEPTH) to return the current function/subroutine call
    depth.
        - 0 when at the global level, i.e. not in a function/subroutine.
        - Primarily for debugging purposes, though a possible production
          use-case would be to allow a program to "bail out" if recursion gets
          too deep.
  - Added MM.INFO(PID) to get the process ID of the MM4L process.
  - Added MM.INFO(CPUTIME) to get the value (in nanoseconds) of the CPU timer
    for the MMB4L process.
  - Changed function, label, subroutine and variable lookup to use hashmap.